--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,26 +1,34 @@
 .editor {
     display: flex;
 	justify-content: center;
-	align-items: center;
-
     padding: 40px 0;
-
     color: var(--black);
 }
 
 .editor_title {
-    margin-bottom: 20px;
-	font-size: 24px;
+    margin-bottom: 15px;
+	font-size: 35px;
 	line-height: 1.4333;
     font-weight: 700;
     color: var(--black);
-    text-align: center;
+    text-align: start;
+}
+
+.editor_btns_nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .tests_wrapper {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    width: 100%
+}
+
+.questions_block {
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .test {
@@ -28,6 +36,7 @@
     margin-bottom: 15px;
     background-color: var(--blue-background);
     border-radius: 10px;
+    width: 100%
 }
 
 .test:hover {
@@ -36,7 +45,7 @@
 
 .test_name {
     margin-bottom: 5px;
-	font-size: 15px;
+	font-size: 18px;
 	line-height: 1.4333;
     font-weight: 600;
     color: var(--accent);
@@ -44,14 +53,14 @@
 
 .test_author {
     margin-bottom: 3px;
-	font-size: 13px;
+	font-size: 15px;
 	line-height: 1.4333;
     font-weight: 400;
     color: var(--grey);
 }
 
 .test_date {
-    font-size: 13px;
+    font-size: 15px;
 	line-height: 1.4333;
     font-weight: 400;
 }
@@ -62,21 +71,18 @@
     background-color: var(--blue);
     color: var(--white);
     border-radius: 10px;
-    width: 180px;
-    text-align: center;
+}
+
+.sort {
+    padding: 15px;
+    margin-bottom: 15px;
+    background-color: var(--black);
+    color: var(--white);
+    border-radius: 10px;
+    display: none;
 }
 
 /*CREATOR*/
-
-.creator {
-    display: flex;
-	justify-content: center;
-	align-items: center;
-
-    padding: 40px 0;
-
-    color: var(--black);
-}
 
 /*INFOTEST*/
 
