--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -103,6 +103,12 @@ body {
 	line-height: 1.3;
 }
 
+.content_wrapper {
+	max-width: 1200px;
+	width: 100%;
+	padding: 0 15px;
+}
+
 /* Btn */
 
 .btn {
